# lex-guard

./: .gitignore  LICENSE  README.md  lex.toml  pyproject.toml  smoke.py
.github/workflows/: ci.yml  lex.yml  publish.yml
docs/design/: python-to-lex.md
examples/: x402_pay_demo.lex
src/: executor.lex  gate.lex  http_exec.lex  main.lex  models.lex  money.lex  policy.lex  skill.lex  token.lex  x402_exec.lex  x402_mock_exec.lex
src/lex_guard/: __init__.py  executor.py  gate.py  mcp_server.py  models.py  token.py  trail.py
tests/: test_gate.lex  test_gate.py  test_http_exec.lex  test_money.lex  test_skill.lex  test_token_policy.lex  test_x402_exec.lex  test_x402_mock_exec.lex
