[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lex-guard"
version = "0.1.0"
description = "Agent spending guardrails: capability-gated budget tokens with attestation trail"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "pyjwt[crypto]>=2.8",
    "cryptography>=42",
]

[project.optional-dependencies]
stripe = ["stripe>=8"]
dev = [
    "pytest>=8",
    "pytest-cov",
    "hypothesis>=6",
    "freezegun",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lex_guard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
