[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lex-guard"
version = "0.1.0"
description = "Agent spending guardrails: capability-gated budget tokens with attestation trail"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["ai-agents", "payments", "spending-controls", "audit-trail", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pyjwt[crypto]>=2.8",
    "cryptography>=42",
]

[project.urls]
Homepage = "https://github.com/alpibrusl/lex-guard"
Repository = "https://github.com/alpibrusl/lex-guard"
Issues = "https://github.com/alpibrusl/lex-guard/issues"

[project.optional-dependencies]
stripe = ["stripe>=8"]
mcp = ["mcp>=1.2"]
dev = [
    "pytest>=8",
    "pytest-cov",
    "hypothesis>=6",
    "freezegun",
]

[project.scripts]
lex-guard-mcp = "lex_guard.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lex_guard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
